fix: update MIME types and logo references for Netlify deployment

--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/sopcrafter-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOPCRAFTER - Turn Videos into Step-by-Step SOPs</title>
     <meta name="description" content="Upload your screen recording. We'll turn it into a professional SOP with screenshots, steps, and more. Perfect for e-commerce teams.">
