refactor: update branding to be more business-focused and add dynamic animations

--- a/project/index.html
+++ b/project/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/sopcrafter-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logos/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SOPCRAFTER - Turn Videos into Step-by-Step SOPs</title>
-    <meta name="description" content="Upload your screen recording. We'll turn it into a professional SOP with screenshots, steps, and more. Perfect for e-commerce teams.">
+    <meta name="description" content="Transform your business processes into clear, engaging SOPs with AI-powered documentation. Create step-by-step guides with voice, screenshots, and more. Perfect for modern teams.">
+    <title>SOPCRAFTER - AI-Powered SOP Creation</title>
   </head>
   <body>
     <div id="root"></div>
